# cosmos-engine

./: .gitignore  LICENSE  README.md  generate_portal.py  polaris_Dr.T.html  pyproject.toml
cosmos/: __init__.py  aspects.py  chart.py  chinese_zodiac.py  constants.py  houses.py  numerology.py  planets.py  synthesis.py
tests/: compare_swe.py  test_accuracy.py
