[project]
name = "cosmos-engine"
version = "1.0.0"
description = "MIT-licensed astrological computation engine. Zero Swiss Ephemeris dependency. Commercial-ready."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Cosmos Engine Contributors"}
]
keywords = ["astrology", "ephemeris", "planets", "houses", "aspects", "natal-chart", "human-design"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "skyfield>=1.48",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyswisseph>=2.10",  # For comparison testing only
]

[project.scripts]
cosmos = "cosmos.chart:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
